<resources>
    <string name="app_name">Kalpataru</string>
    <string name="onboarding_title_1">Gabung Bersama Kami!</string>
    <string name="onboarding_desc_1">Mari gabung bersama kami untuk bersama-sama membantu melestarikan kelestarian lingkungan kita!</string>
    <string name="onboarding_title_2">Jangan Buang Sampah Kamu!</string>
    <string name="onboarding_desc_2">Kami siap menampung sampah anda. Kami siap meluncur ke lokasi kamu untuk mengambil sampah kamu!</string>
    <string name="onboarding_title_3">Jadikan Sampah Kamu Lebih Bernilai!</string>
    <string name="onboarding_desc_3">Daripada sampah anda buang cuma cuma, kami siap mengubah sampah anda menjadi sesuatu yang lebih bernilai!</string>
    <string name="onboarding_title_4">Beli Produk Recycle Kami!</string>
    <string name="onboarding_desc_4">Mari wujudkan ekosistem pengelolaan sampah menjadi lebih bernilai dengan membeli olahan sampah recycle dari kami!</string>
    <string name="start_now">Mulai Sekarang!</string>
    <string name="login_description">Masukkan Username/E-Mail dan Password anda untuk melanjutkan</string>
    <string name="email">E-Mail</string>
    <string name="title_home">Home</string>
    <string name="title_sell">Jual</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profil</string>

    <string name="trashname">Nama Sampah</string>
    <string name="trashweight">Berat Sampah</string>
    <string name="total">Total</string>
    <string name="nominal">Rp. Nominal</string>
    <string name="sell">Jual</string>
    <string name="weight">Berat</string>
    <string name="add">Tambah item</string>
    <string name="apply">Terapkan</string>
    <string name="all">Semua</string>
    <string name="finish">Selesai</string>
    <string name="canceled">Dibatalkan</string>
    <string name="progress">Sedang proses</string>

    <string name="profile_name">Nama User</string>
    <string name="address">Alamat</string>
    <string name="logout">Logout</string>
    <string name="profile_status">Pengepul/Penjual</string>
    <string name="btn_map">Lihat di Map</string>

    <string name="info1">Sampah yang dijual disekitarmu!</string>
    <string name="sellername">Nama Penjual</string>
    <string name="selleraddress">Alamat Penjual</string>
    <string name="selldate">Tanggal Jual</string>
    <string name="location_point">Lokasi</string>

    <string name="status">Status Transaksi</string>
    <string name="date">Tanggal Transaksi</string>
    <string name="more_item">+n item</string>
    <string name="username_hint">Masukkan Username Anda</string>
    <string name="username_or_email_hint">Masukkan Username atau E-Mail Anda</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username/E-Mail</string>
    <string name="password">Password</string>
    <string name="password_hint">Masukkan Password Anda</string>
    <string name="login">Masuk</string>
    <string name="havent_account">Belum Mempunyai Akun?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="register_description">Gabung bersama kami untuk menjadi bagian pelestari lingkungan sekitar!</string>
    <string name="name">Nama</string>
    <string name="name_hint">Masukkan Nama Anda</string>
    <string name="register_as">Mau Daftar Sebagai Apa?</string>
    <string name="have_account">Sudah Mempunyai Akun?</string>
    <string name="login_now">Login Disini</string>
    <string name="register">Daftar</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="confirmation_password_hint">Masukkan Ulang Password Anda</string>
    <string name="email_hint">Masukkan E-Mail Aktif</string>
    <string name="cancel">Batal</string>
    <string name="point">Total Point</string>
    <string name="balance">Total Balance</string>
    <string name="total_item">Total Item</string>
    <string name="total_weight">Total Berat</string>
    <string name="price_label">Harga per Kg Sampah</string>
    <string name="description_home_operator">Info! Anda Sebagai Operator Bisa Membeli Sampah</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="complete">Selesaikan</string>

    <string-array name="roles_array">
        <item>Pengepul</item>
        <item>Penjual</item>
    </string-array>
</resources>