<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.InsertActivity">

    <ImageView
        android:id="@+id/img_trash"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_trashnameinsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/trashname"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_trash" />

        <TextView
            android:id="@+id/tv_trashweightinsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trashnameinsert" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trashweightinsert"
            app:layout_constraintStart_toEndOf="@+id/tv_trashweightinsert"
            app:layout_constraintTop_toTopOf="@+id/tv_trashweightinsert" />

        <TextView
            android:id="@+id/tv_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

        <TextView
            android:id="@+id/tv_totalinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trashweightinsert" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nominalinfo" />

        <TextView
            android:id="@+id/tv_nominalinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/nominal"
            android:textColor="@color/secondary"
            app:layout_constraintBottom_toBottomOf="@+id/tv_totalinfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_totalinfo" />

</androidx.constraintlayout.widget.ConstraintLayout>